# rust-bitxhub-client

./: Cargo.toml  README.md  build.rs
config/: node4.json
proto/: arg.proto  audit_info.proto  basic.proto  block.proto  broker.proto  chain.proto  ibtp.proto  interchain_meta.proto  receipt.proto  transaction.proto
src/: client.rs  crypto.rs  lib.rs
src/pb/: abi.rs
